@@ -75,7 +75,7 @@ bool CreatureEvents::registerEvent(Event* event, xmlNodePtr p)
 
 	if(creatureEvent->getEventType() == CREATURE_EVENT_NONE)
 	{
-		std::cout << "Error: [CreatureEvents::registerEvent] Trying to register event without type!." << std::endl;
+		std::cout << "[Error - CreatureEvents::registerEvent] Trying to register event without type!." << std::endl;
 		return false;
 	}
 
@@ -105,6 +105,7 @@ CreatureEvent* CreatureEvents::getEventByName(const std::string& name, bool forc
 		if(!forceLoaded || it->second->isLoaded())
 			return it->second;
 	}
+
 	return NULL;
 }
 
@@ -119,6 +120,7 @@ uint32_t CreatureEvents::playerLogin(Player* player)
 				return 0;
 		}
 	}
+
 	return 1;
 }
 
@@ -133,6 +135,7 @@ uint32_t CreatureEvents::playerLogout(Player* player)
 				return 0;
 		}
 	}
+
 	return 1;
 }
 
@@ -148,13 +151,12 @@ Event(_interface)
 bool CreatureEvent::configureEvent(xmlNodePtr p)
 {
 	std::string str;
-	//Name that will be used in monster xml files and
-	// lua function to register events to reference this event
+	//Name that will be used in monster xml files and lua function to register events to reference this event
 	if(readXMLString(p, "name", str))
 		m_eventName = str;
 	else
 	{
-		std::cout << "Error: [CreatureEvent::configureEvent] No name for creature event." << std::endl;
+		std::cout << "[Error - CreatureEvent::configureEvent] No name for creature event." << std::endl;
 		return false;
 	}
 
@@ -177,17 +179,20 @@ bool CreatureEvent::configureEvent(xmlNodePtr p)
 			m_type = CREATURE_EVENT_KILL;
 		else if(tmpStr == "death")
 			m_type = CREATURE_EVENT_DEATH;
+		else if(tmpStr == "preparedeath")
+			m_type = CREATURE_EVENT_PREPAREDEATH;
 		else
 		{
-			std::cout << "Error: [CreatureEvent::configureEvent] No valid type for creature event." << str << std::endl;
+			std::cout << "[Error - CreatureEvent::configureEvent] No valid type for creature event." << str << std::endl;
 			return false;
 		}
 	}
 	else
 	{
-		std::cout << "Error: [CreatureEvent::configureEvent] No type for creature event."  << std::endl;
+		std::cout << "[Error - CreatureEvent::configureEvent] No type for creature event."  << std::endl;
 		return false;
 	}
+
 	m_isLoaded = true;
 	return true;
 }
@@ -199,32 +204,28 @@ std::string CreatureEvent::getScriptEventName()
 	{
 		case CREATURE_EVENT_LOGIN:
 			return "onLogin";
-			break;
 		case CREATURE_EVENT_LOGOUT:
 			return "onLogout";
-			break;
 		case CREATURE_EVENT_THINK:
 			return "onThink";
-			break;
 		case CREATURE_EVENT_ADVANCE:
 			return "onAdvance";
-			break;
 		case CREATURE_EVENT_LOOK:
 			return "onLook";
-			break;
 		case CREATURE_EVENT_ATTACK:
 			return "onAttack";
-			break;
 		case CREATURE_EVENT_KILL:
 			return "onKill";
-			break;
 		case CREATURE_EVENT_DEATH:
 			return "onDeath";
-			break;
+		case CREATURE_EVENT_PREPAREDEATH:
+			return "onPrepareDeath";
 		case CREATURE_EVENT_NONE:
 		default:
-			return "";
+			break;
 	}
+
+	return "";
 }
 
 void CreatureEvent::copyEvent(CreatureEvent* creatureEvent)
@@ -273,7 +274,7 @@ uint32_t CreatureEvent::executeOnLogin(Player* player)
 	}
 	else
 	{
-		std::cout << "[Error] Call stack overflow. CreatureEvent::executeOnLogin" << std::endl;
+		std::cout << "[Error - CreatureEvent::executeOnLogin] Call stack overflow." << std::endl;
 		return 0;
 	}
 }
@@ -308,7 +309,7 @@ uint32_t CreatureEvent::executeOnLogout(Player* player)
 	}
 	else
 	{
-		std::cout << "[Error] Call stack overflow. CreatureEvent::executeOnLogout" << std::endl;
+		std::cout << "[Error - CreatureEvent::executeOnLogout] Call stack overflow." << std::endl;
 		return 0;
 	}
 }
@@ -344,7 +345,7 @@ uint32_t CreatureEvent::executeOnThink(Creature* creature, uint32_t interval)
 	}
 	else
 	{
-		std::cout << "[Error] Call stack overflow. CreatureEvent::executeOnThink" << std::endl;
+		std::cout << "[Error - CreatureEvent::executeOnThink] Call stack overflow." << std::endl;
 		return 0;
 	}
 }
@@ -382,7 +383,7 @@ uint32_t CreatureEvent::executeOnAdvance(Player* player, skills_t skill, uint32_
 	}
 	else
 	{
-		std::cout << "[Error] Call stack overflow. CreatureEvent::executeOnAdvance" << std::endl;
+		std::cout << "[Error - CreatureEvent::executeOnAdvance] Call stack overflow." << std::endl;
 		return 0;
 	}
 }
@@ -418,7 +419,7 @@ uint32_t CreatureEvent::executeOnLook(Player* player, const Position& position, 
 	}
 	else
 	{
-		std::cout << "[Error] Call stack overflow. CreatureEvent::executeOnLook" << std::endl;
+		std::cout << "[Error - CreatureEvent::executeOnLook] Call stack overflow." << std::endl;
 		return 0;
 	}
 }
@@ -455,7 +456,7 @@ uint32_t CreatureEvent::executeOnAttack(Creature* creature, Creature* target)
 	}
 	else
 	{
-		std::cout << "[Error] Call stack overflow. CreatureEvent::executeOnAttack" << std::endl;
+		std::cout << "[Error - CreatureEvent::executeOnAttack] Call stack overflow." << std::endl;
 		return 0;
 	}
 }
@@ -492,7 +493,7 @@ uint32_t CreatureEvent::executeOnKill(Creature* creature, Creature* target)
 	}
 	else
 	{
-		std::cout << "[Error] Call stack overflow. CreatureEvent::executeOnKill" << std::endl;
+		std::cout << "[Error - CreatureEvent::executeOnKill] Call stack overflow." << std::endl;
 		return 0;
 	}
 }
@@ -533,7 +534,46 @@ uint32_t CreatureEvent::executeOnDeath(Creature* creature, Item* corpse, Creatur
 	}
 	else
 	{
-		std::cout << "[Error] Call stack overflow. CreatureEvent::executeOnDeath" << std::endl;
+		std::cout << "[Error - CreatureEvent::executeOnDeath] Call stack overflow." << std::endl;
+		return 0;
+	}
+}
+
+uint32_t CreatureEvent::executeOnPrepareDeath(Creature* creature, Creature* lastHitKiller, Creature* mostDamageKiller)
+{
+	//onPrepareDeath(cid, lastHitKiller, mostDamageKiller)
+	if(m_scriptInterface->reserveScriptEnv())
+	{
+		ScriptEnviroment* env = m_scriptInterface->getScriptEnv();
+
+		#ifdef __DEBUG_LUASCRIPTS__
+		char desc[35];
+		sprintf(desc, "%s", creature->getName().c_str());
+		env->setEventDesc(desc);
+		#endif
+
+		env->setScriptId(m_scriptId, m_scriptInterface);
+		env->setRealPos(creature->getPosition());
+
+		uint32_t cid = env->addThing(creature);
+		uint32_t lastKid = env->addThing(lastHitKiller);
+		uint32_t mostKid = env->addThing(mostDamageKiller);
+
+		lua_State* L = m_scriptInterface->getLuaState();
+
+		m_scriptInterface->pushFunction(m_scriptId);
+		lua_pushnumber(L, cid);
+		lua_pushnumber(L, lastKid);
+		lua_pushnumber(L, mostKid);
+
+		int32_t result = m_scriptInterface->callFunction(3);
+		m_scriptInterface->releaseScriptEnv();
+
+		return (result == LUA_TRUE);
+	}
+	else
+	{
+		std::cout << "[Error - CreatureEvent::executeOnPrepareDeath] Call stack overflow." << std::endl;
 		return 0;
 	}
 }
