@@ -721,23 +721,20 @@ bool TalkAction::showBanishmentInfo(Player* player, const std::string& cmd, cons
 		accountId = IOLoginData::getInstance()->getAccountIdByName(param);
 
 	Ban ban;
-	if(IOBan::getInstance()->getData(accountId, ban))
+	if(IOBan::getInstance()->getData(accountId, ban) && (ban.type == BANTYPE_BANISHMENT || ban.type == BANTYPE_DELETION))
 	{
-		bool deletion = (ban.type == BANTYPE_DELETION);
-
-		std::string name_;
+		bool deletion = ban.type == BANTYPE_DELETION;
+		std::string name;
 		if(ban.adminid == 0)
-			name_ = (deletion ? "Automatic deletion" : "Automatic banishment");
+			name = (deletion ? "Automatic deletion" : "Automatic banishment");
 		else
-			IOLoginData::getInstance()->getNameByGuid(ban.adminid, name_);
+			IOLoginData::getInstance()->getNameByGuid(ban.adminid, name);
 
-		char date[16], date2[16];
+		char date[16], date2[16], buffer[500 + ban.comment.length()];
 		formatDate2(ban.added, date);
 		formatDate2(ban.expires, date2);
-
-		char buffer[500 + ban.comment.length()];
 		sprintf(buffer, "Account has been %s at:\n%s by: %s,\nfor the following reason:\n%s.\nThe action taken was:\n%s.\nThe comment given was:\n%s.\n%s%s.",
-			(deletion ? "deleted" : "banished"), date, name_.c_str(), getReason(ban.reason).c_str(), getAction(ban.action, false).c_str(),
+			(deletion ? "deleted" : "banished"), date, name.c_str(), getReason(ban.reason).c_str(), getAction(ban.action, false).c_str(),
 			ban.comment.c_str(), (deletion ? "Account won't be undeleted" : "Banishment will be lifted at:\n"), (deletion ? "." : date));
 
 		player->sendFYIBox(buffer);
